重构PRD：章节文件改名，去除README

--- a/prd/02-standards-and-terms/参考标准与术语.md
+++ b/prd/02-standards-and-terms/参考标准与术语.md
@@ -1,5 +1,7 @@
 # 2. 参考标准与术语
-## 2.1 标准与规范（标准名称-核心内容-作用）
+## 2.1 相关政策与规划
+
+## 2.2 标准与规范（标准名称-核心内容-作用）
 | 标准名称 | 核心内容 | 作用 |
 |---|---|---|
 | OAIS (ISO 14721) | 开放档案信息系统参考模型 | 作为长期保存与交付闭环的功能对标：入库、存储、数据管理、访问、保存规划、管理。 |
