文档：补充政策规划与标准链接

--- a/prd/02-standards-and-terms/参考标准与术语.md
+++ b/prd/02-standards-and-terms/参考标准与术语.md
@@ -1,17 +1,42 @@
 # 2. 参考标准与术语
 ## 2.1 相关政策与规划
+| 类别 | 政策/法律/规划 | 发布机构 | 时间 | 摘要（与本项目相关） |
+|---|---|---|---|---|
+| 国家数据法律法规 | 中华人民共和国网络安全法 | 全国人大常委会 | 2016-11-07（2017-06-01施行） | 明确网络运营者安全保护义务与关键信息基础设施相关要求；对数据本地化、出境等提出框架性要求（与资源库、审计、导出/对外发布相关）。 |
+| 国家数据法律法规 | 中华人民共和国数据安全法 | 全国人大常委会 | 2021-06-10（2021-09-01施行） | 将数据处理活动纳入监管，强调分类分级、重要数据保护、风险评估与应急处置；对政务数据安全与开放提出原则要求（与数据分级、审计、共享开放口径相关）。 |
+| 国家数据法律法规 | 中华人民共和国个人信息保护法 | 全国人大常委会 | 2021-08-20（2021-11-01施行） | 规范个人信息处理规则、敏感个人信息、跨境提供；要求合法、正当、必要，明确告知与授权、访问更正删除等权利（与人物/拍摄者等信息字段、对外发布与导出控制相关）。 |
+| 国家数据法律法规 | 中华人民共和国档案法（2020修订） | 全国人大常委会 | 2020-06-20（2021-01-01施行） | 强调档案信息化建设与安全管理、开放利用制度；对档案出境、委托服务、监督检查等提出制度安排（与长期保存、事件记录、开放利用门禁相关）。 |
+| 国家数据基础制度 | 关于构建数据基础制度更好发挥数据要素作用的意见（“数据二十条”） | 中共中央、国务院 | 2022-12-02（对外发布：2022-12-19） | 围绕数据产权、流通交易、收益分配、安全治理提出顶层制度安排，强调分类分级、确权授权、合规流通与可追溯（与数据治理、共享交换、授权与审计口径相关）。 |
+| 国家数字化顶层 | 数字中国建设整体布局规划 | 中共中央、国务院 | 2023-02-27 | 提出“2522”整体框架，强调数据资源体系、数字文化、数字安全等能力建设（与平台总体架构、数据资源治理、可观测与安全基线相关）。 |
+| 国家文化数字化 | 关于推进实施国家文化数字化战略的意见 | 中共中央办公厅、国务院办公厅 | 2022-05-22 | 明确建设国家文化大数据体系、中华文化数据库等方向；提出文化数据安全标准、数据入库标准、产权保护与共享机制（与元数据标准化、入库门禁、对外服务/交易监管相关）。 |
+| 国家五年规划 | “十五五”（2026-2030）规划编制与前期研究（政策动向） | 国家发展改革委等 | 2025-03-03（及后续持续） | 明确“十五五”规划前期研究与谋划重点（重大趋势/重大战略/重大项目等），为 2026-2030 年各领域专项规划与项目布局提供依据（与项目路线图、阶段性目标设定相关）。 |
+| 国家五年规划 | 中共中央关于制定国民经济和社会发展第十五个五年规划的建议 | 中国共产党中央委员会 | 2025-10（审议通过） | 提供“十五五”时期的总体部署与方向性要求（可作为项目中长期目标与年度拆解的政策依据）。 |
+| 文博行业政策 | 博物馆条例（国务院令第659号） | 国务院 | 2015-02-09（2015-03-20施行） | 规范博物馆设立、运行与社会服务，强调藏品保护与规范管理；对行业监管、公益属性与服务要求有明确规定（与资源管理制度、对外服务与合规约束相关）。 |
+| 文博行业规划 | “十四五”文物保护和科技创新规划（国办发〔2021〕43号） | 国务院办公厅 | 2021-10-28（公开发布：2021-11-08） | 强调文物资源（含数字资源）管理、文物安全、科技创新与数据库建设等；为文物数字化与资源治理提供专项规划依据（与资源库建设、标准化、长期保存与安全机制相关）。 |
+
+来源（权威发布链接）：
+- 中华人民共和国数据安全法：https://www.cac.gov.cn/2021-06/11/c_1624994566919140.htm
+- 中华人民共和国个人信息保护法：http://www.npc.gov.cn/npc/c2/c30834/202108/t20210820_313088.html
+- 中华人民共和国网络安全法：https://www.gov.cn/xinwen/2016-11/07/content_5129723.htm
+- 关于构建数据基础制度更好发挥数据要素作用的意见（“数据二十条”）：http://politics.people.com.cn/n1/2022/1219/c1001-32589890.html
+- 关于推进实施国家文化数字化战略的意见：https://www.mee.gov.cn/zcwj/zyygwj/202205/t20220522_982842.shtml
+- 数字中国建设整体布局规划：https://www.cac.gov.cn/2023-02/27/c_1679136694986243.htm
+- 博物馆条例（国务院令第659号）：https://www.gov.cn/zhengce/2015-03/02/content_2823823.htm
+- “十四五”文物保护和科技创新规划：https://www.gov.cn/zhengce/content/2021-11/08/content_5649764.htm
+- “十五五”规划前期研究与谋划（政策动向示例）：https://www.ndrc.gov.cn/wsdwhfz/202503/t20250303_1396402.html
+- “十五五”规划建议相关权威报道（示例）：https://www.spp.gov.cn/spp/tt/202510/t20251029_709755.shtml
 
 ## 2.2 标准与规范（标准名称-核心内容-作用）
-| 标准名称 | 核心内容 | 作用 |
-|---|---|---|
-| OAIS (ISO 14721) | 开放档案信息系统参考模型 | 作为长期保存与交付闭环的功能对标：入库、存储、数据管理、访问、保存规划、管理。 |
-| DDI (Data Documentation Initiative) | 数据文档规范 | 作为“可独立解读/可复用”的元数据方法论对标：字段级解释、缺失/未知口径、可复现要求。 |
-| CoreTrustSeal | 受信任数字存储库要求 | 作为可信存储库治理对标：组织、数字对象管理、技术与安全的核心准则。 |
-| PREMIS | 保存元数据字典 | 规范保存对象/事件/代理等，支撑长期保存可追溯与可审计。 |
-| ANSI/NISO Z39.87-2006 (R2017) | 数字静态图像技术元数据字典 | 规范影像技术元数据（格式、分辨率、色彩空间、Fixity 等），支撑影像可理解与可重用。 |
-| IIIF | 国际图像互操作框架 | 支撑影像切片、跨系统浏览与深度缩放；与 Mirador 等前端查看器对接。 |
-| BagIt | 数字对象打包规范 | 支撑按需生成可校验的交付/交换包（manifest、payload）。 |
-| METS | 元数据编码与传输标准 | 用于组织描述性、技术性、结构性元数据，便于长期保存与交换。 |
+| 标准名称 | 核心内容 | 作用 | 权威链接 |
+|---|---|---|---|
+| OAIS (ISO 14721) | 开放档案信息系统参考模型 | 作为长期保存与交付闭环的功能对标：入库、存储、数据管理、访问、保存规划、管理。 | https://www.iso.org/standard/87471.html |
+| DDI (Data Documentation Initiative) | 数据文档规范 | 作为“可独立解读/可复用”的元数据方法论对标：字段级解释、缺失/未知口径、可复现要求。 | https://ddialliance.org/Specification/ |
+| CoreTrustSeal | 受信任数字存储库要求 | 作为可信存储库治理对标：组织、数字对象管理、技术与安全的核心准则。 | https://www.coretrustseal.org/why-certification/requirements/ |
+| PREMIS | 保存元数据字典 | 规范保存对象/事件/代理等，支撑长期保存可追溯与可审计。 | https://www.loc.gov/standards/premis/ |
+| ANSI/NISO Z39.87-2006 (R2017) | 数字静态图像技术元数据字典 | 规范影像技术元数据（格式、分辨率、色彩空间、Fixity 等），支撑影像可理解与可重用。 | https://www.niso.org/publications/ansiniso-z3987-2006-r2017-data-dictionary-technical-metadata-digital-still-images |
+| IIIF | 国际图像互操作框架 | 支撑影像切片、跨系统浏览与深度缩放；与 Mirador 等前端查看器对接。 | https://iiif.io/api/ |
+| BagIt | 数字对象打包规范 | 支撑按需生成可校验的交付/交换包（manifest、payload）。 | https://datatracker.ietf.org/doc/html/rfc8493 |
+| METS | 元数据编码与传输标准 | 用于组织描述性、技术性、结构性元数据，便于长期保存与交换。 | https://www.loc.gov/standards/mets/ |
 
 ## 2.2 术语表（本 PRD 口径）
 - 数字资产：被管理的资源对象（主文件 + 衍生文件 + 元数据 + 权利 + 事件记录）。
@@ -19,4 +44,3 @@
 - 衍生文件：由主文件生成用于预览/发布/检索的派生版本（缩略图、切片、转码、低清、水印版等）。
 - 代表影像：同一文物关联多张影像时用于展示/检索聚合的“首选影像”。
 - SIP/AIP/DIP：按 OAIS 口径定义的提交包/保存包/分发包（本项目入库架构采用“分离式 SIP”传输形态）。
-
