文档：将总体关系图SVG纳入仓库并改为相对引用

--- a/prd/03-architecture/总体架构（平台-系统-模块）.md
+++ b/prd/03-architecture/总体架构（平台-系统-模块）.md
@@ -32,6 +32,10 @@
 - 故宫博物院藏古文字数字平台、藏品总目、故宫名画记/数字多宝阁等：作为上层应用或数据来源/展示端，对接资源展示与检索能力。
 
 ## 3.5 总体关系图（Mermaid）
+
+<!-- 使用 draw.io 嵌入本地 SVG 流程图 -->
+![](assets/mdams-overview-flow.svg)
+
 ```mermaid
 flowchart TB
   subgraph 系统层
@@ -82,4 +86,3 @@ flowchart TB
   RareBook -->|Manifests URL/浏览| Show
   OtherApps --> Show
 ```
-
