docs: 新增项目宣言并更新一页摘要
新增 reference/manifesto.md 文件，定义 MDRS 系统的核心原则、交互感觉和技术底线。更新 prd/01-summary/一页摘要.md，将宣言中的核心定义融入摘要，并补充数据治理问题。删除过时的 DATA_INGEST_ARCHITECTURE.md 文件。

--- a/prd/01-summary/一页摘要.md
+++ b/prd/01-summary/一页摘要.md
@@ -1,11 +1,14 @@
 # 1. 一页摘要
 ## 1.1 一句话结论
-建设一套“数字资源管理架构”，以**系统层（资源管理系统 / 数字文物库 / 数字多宝阁）**为入口，以**资源库层（影像 / 视频 / 模型资源库）**为资产底座，以**模块层（采集 / 利用 / 授权 / 展示 / 对外发布审核 / 长期保存 / 人工智能）**为可插拔能力，形成资源全生命周期闭环；影像资源库以 **PREMIS、ANSI/NISO Z39.87、IIIF、Elasticsearch+Milvus、ZFS、PostgreSQL JSONB、Libvips** 等体系与组件落地。
+这是一个**“以文物为中心”的本地化数字圣殿**。
+它不是一个通用的文件管理器，而是一个专为博物馆场景打造的、基于“资源即服务（Asset as a Service）”理念的数字资产管理系统。它既是摄影师的工作台，也是研究员的资料库。
+建设一套“数字资源管理架构”，以**系统层（资源管理系统 / 数字文物库 / 数字多宝阁）**为入口，以**资源库层（影像 / 视频 / 模型资源库）**为资产底座，以**模块层（采集 / 利用 / 授权 / 展示 / 对外发布审核 / 长期保存 / 人工智能）**为可插拔能力，形成资源全生命周期闭环；影像资源库以 **PREMIS、ANSI/NISO Z39.87、IIIF、Elasticsearch+Milvus、ZFS、PostgreSQL JSONB、Libvips** 等体系与组件落地。系统必须运行在中国国产设备和操作系统之上。
 
 ## 1.2 背景与问题
 - 资源类型多且体量大：影像（超高清）、视频、三维模型等；主文件与衍生文件并存。
 - 管理与利用链路不闭环：元数据口径不统一、版本重复干扰检索、授权与发布流程缺少强约束与审计。
 - 长期保存需要标准化：入库完整性校验、保存事件记录、可追溯与可验证、按需打包交付。
+- 数据治理不到位：有已经过时格式的资源数据，部分内容元数据不完整。
 
 ## 1.3 目标（高优先级）
 - 资源可管：入库/编目/审核/版本/权限/审计闭环。
