--- a/prd/目录.md
+++ b/prd/目录.md
@@ -31,11 +31,12 @@
 - **可视化流程**：包含入库时序图、OCR 文本提取流程等 Mermaid 图表。
 - **数据流转**：定义了从采集端到存储端的完整数据生命周期。
 
-### [05. 影像资源库设计](05-image-repo-design/影像资源库设计（数据层-索引层-服务层-展示层）.md)
+### [05. 资源库设计（影像/三维/视频）](05-resource-repo-design/影像资源库设计（数据层-索引层-服务层-展示层）.md)
 **关键点**：
 - **分层设计**：详细拆解了数据层、索引层、服务层、展示层的技术实现。
 - **图表展示**：提供了分层结构图和 IIIF 交互流程图。
 - **核心能力**：涵盖元数据管理、混合检索（全文+向量）、即时切片服务（Libvips）。
+- **[新增] 三维资源库**：[三维资源库设计（数据层-索引层-服务层-展示层）](05-resource-repo-design/三维资源库设计（数据层-索引层-服务层-展示层）.md)，包含 glTF/USDZ 交付、LOD 优化与 WebXR 展示。
 
 ### [06. 功能需求](06-requirements/功能需求（来自“业务需求表”）.md)
 **关键点**：
